# aioterminal

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
example/: echo.py
src/aioterminal/: __init__.py  codes.py  keys.py  parser.py
test/: test_codes.py  test_keys.py  test_parser.py
